hardwareinfo spacing fixes

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -168,9 +168,9 @@ header label {
 
 /* ------ HARDWARE ------ */
 pre {
-  max-height: 400px;
+  max-height: 300px;
   max-width: 100%;
-  overflow: scroll;
+  /* overflow: scroll; */
   border: 2px solid var(--Smoke);
 }
 /* ------ END HARDWARE ------ */
